; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_ras.c_amdgpu_ras_suspend.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_ras.c_amdgpu_ras_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { i32 }
%struct.amdgpu_ras = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @amdgpu_ras_suspend(%struct.amdgpu_device* %0) #0 {
  %2 = alloca %struct.amdgpu_device*, align 8
  %3 = alloca %struct.amdgpu_ras*, align 8
  store %struct.amdgpu_device* %0, %struct.amdgpu_device** %2, align 8
  %4 = load %struct.amdgpu_device*, %struct.amdgpu_device** %2, align 8
  %5 = call %struct.amdgpu_ras* @amdgpu_ras_get_context(%struct.amdgpu_device* %4)
  store %struct.amdgpu_ras* %5, %struct.amdgpu_ras** %3, align 8
  %6 = load %struct.amdgpu_ras*, %struct.amdgpu_ras** %3, align 8
  %7 = icmp ne %struct.amdgpu_ras* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %19

9:                                                ; preds = %1
  %10 = load %struct.amdgpu_device*, %struct.amdgpu_device** %2, align 8
  %11 = call i32 @amdgpu_ras_disable_all_features(%struct.amdgpu_device* %10, i32 0)
  %12 = load %struct.amdgpu_ras*, %struct.amdgpu_ras** %3, align 8
  %13 = getelementptr inbounds %struct.amdgpu_ras, %struct.amdgpu_ras* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %9
  %17 = load %struct.amdgpu_device*, %struct.amdgpu_device** %2, align 8
  %18 = call i32 @amdgpu_ras_disable_all_features(%struct.amdgpu_device* %17, i32 1)
  br label %19

19:                                               ; preds = %8, %16, %9
  ret void
}

declare dso_local %struct.amdgpu_ras* @amdgpu_ras_get_context(%struct.amdgpu_device*) #1

declare dso_local i32 @amdgpu_ras_disable_all_features(%struct.amdgpu_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
